# minia

./: .gitignore  CMakeLists.txt  README.md  go.mod  pyproject.toml  requirements.txt  setup.py  test.cc
.github/workflows/: main.yml
cmake/: antlr4.cmake  flatbuffers.cmake  gflags.cmake  glog.cmake  pybind11.cmake
doc/: expression.md  repeat_apply.md
examples/: config.toml  minia_test.cc  node-test.js  parse.cc  test.py
examples/config/: config.toml  config_2.toml
examples/cpp/: minia_test.cc  parse.cc  test1.cc
examples/data/python/: generate_data.py
examples/data/python/minia/: FlatFeature.py  FlatFeatures.py  FlatFloatArray.py  FlatFloatValue.py  FlatInt64Array.py  FlatInt64Value.py  FlatMaterial.py  FlatMaterialCollection.py  FlatNil.py  FlatStringArray.py  FlatStringValue.py  FlatValue.py  FlatValueWrapper.py
examples/go/: go.mod  main.go
examples/go/wrapper/: wrapper.go
examples/js/: test.js
examples/python/: exprs.txt  test.py  test_2.py
go/: wrapper.go
include/: builtin.h  cminia.h  common.h  feature.h  features.fbs  features_generated.h  go.hpp  helper.h  jsminia.h  minia.h  pyminia.h
include/grammar/: minia.g4  minia.h  minia.interp  miniaBaseListener.h  miniaLexer.h  miniaLexer.interp  miniaLexer.tokens  miniaListener.h  miniaParser.h
lib/: minia.d.ts  minia.js
src/: builtin.cc  cminia.cc  common.cc  jsminia.cc  minia.cc  pyminia.cc
src/grammar/: minia.cc  miniaBaseListener.cpp  miniaLexer.cpp  miniaListener.cpp  miniaParser.cpp
webassembly/: antlr4.sh  build.sh  makefile
